--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+*{ /*gilt fuer alle Elemente*/
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -14,22 +14,49 @@ li, a{
 
 body{
     font-family: Arial, Helvetica, sans-serif; /*Standart Schrifftart*/
-    background-color: lightgray;
+    background-color: #f1f1f1;
     font-size: 16px; /*Standart Schrifftgroese*/
+    position: relative;
+    padding-bottom: 20px;
+    min-height: 100vh;
 }
-#stickyfooter{flex:1}
+
 
 header{
     display: flex; /*danach war alles nebeneinander*/
+    text-align: center;
     justify-content: space-between; /*alles schoen getrennt voneinander*/
     align-items: center;
-    padding: 30px 10%;
-    background-color: #66ff66;
-}
-
-h1, h4 {
+    padding: 20px 10%;
+    background-color: #333;
     color:  #009919;
 }
+
+main{
+    width: 90vw;
+    margin: 0 auto;
+    padding: 30px 20px; /* 30px von rechts und links weg und 20px von oben und unten*/
+    /*min-height: calc(75vh);*/
+}
+
+article{
+    background-color: azure;
+    padding: 20px; /*wie weit es vom Rand weg ist*/
+    margin-bottom: 20px; /*20px vom unteren objekt weg*/
+    border-radius: 5px;
+}
+.container{
+    background-color: azure;
+    padding: 20px; /*wie weit es vom Rand weg ist*/
+    margin-bottom: 20px; /*20px vom unteren objekt weg*/
+    border-radius: 5px;
+}
+
+article:last-child{
+    margin-bottom: 0;
+}
+
+
 
 .logo{
     cursor: pointer;
@@ -37,21 +64,20 @@ h1, h4 {
 
 .nav_links{
     list-style: none;
-    
 }
 .nav_links li{
     display: inline-block; /* sind nichrt mehr untereinander sonder nebeneinander*/
     padding: 0px 20px;
 }
-.nav_links li a{
-    transition: all 0.3s ease 0s;
-    
-}
-.nav_links la a:hover{
-    color: blueviolet;
-}
+
 footer{
-    background-color: #66ff66;
-    margin-bottom: 0px;
+    align-items: center;
+    padding: 20px 10%;
+    background-color: #333;
+    color:  #009919;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
+
 
