--- a/Templades/template.css
+++ b/Templades/template.css
@@ -1,64 +1,276 @@
+html{
+    height: 100%;/*Sticky - foot*/
+}
+
 *{ /*gilt fuer alle Elemente*/
-    box-sizing: border-box;
+    
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+.container{
+    width: 100%;
+    min-height: 10vh;
+    box-sizing: border-box;
+    overflow: hidden;
+    background-color: #24262b;
+    padding: 40px 0;
+    color: #bbbbbb;
+
+    /*Erstellt den Ramen der class container*/
+    border-color: #000;
+    border-style: groove;
+    border-width: 5px;
+    
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif; /*Standart Schrifftart*/
-    background-color: #f1f1f1;
-    font-size: 16px; /*Standart Schrifftgroese*/
-    position: relative;
-    padding-bottom: 20px;
-    min-height: 100vh;
-}
-
-
-header{
-    display: flex; /*danach war alles nebeneinander*/
-    text-align: center;
-    justify-content: space-between; /*alles schoen getrennt voneinander*/
+/* Menueleiste  */
+.navbar{
+    width: 100%;
+    display: flex;
     align-items: center;
-    padding: 20px 10%;
-    background-color: #333;
-    color:  #009919;
 }
-li, a{
-    font-family: Arial, Helvetica, sans-serif; /*Standart Schrifftart*/
-    font-size: 16px;
-    font-weight: 500;
-    color:  #009919;
+.logo{
+    width: 50px;
+    cursor: pointer;
+    margin: 30px;
+}
+.menu-icon{
+    width: 25px;
+    cursor: pointer;
+}
+
+nav{
+    height: 80px;
+    background-color: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /*
+    flex: 1;
+    text-align: right;*/
+}
+nav ul{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+}
+nav li{
+    height: 100%;
+    width: 150px;
+    text-align: center;
+    position: relative;
+}
+nav li:hover{
+    background-color: yellow;
+}
+nav ul a{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
 }
+.dropdown{
+    height: min-content;
+    width: 200px;
+    background-color: blueviolet;
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 80px;
+}
+.dropdown li{
+    height: 70px;
+    width: 100%;
+}
+.dropdown li a{
+    justify-content: flex-start;
+    padding-left: 30px;
+    width: calc(100% -30px);
+}
+nav li:hover .dropdown{
+    display: flex;
+}
+nav input[type="checkbox"]{
+    display: none;
+}
+.expandable_li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.toggle_button{
+    width: 30px;
+    height: 23px;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.bar{
+    height: 4px;
+    width: 100%;
+    background: #e91e63;
+    border-radius: 100px;
+}
 
-.nav_links li{
-    display: inline-block; /* sind nichrt mehr untereinander sonder nebeneinander*/
-    padding: 0px 20px;
+
+
+nav ul li{
+    list-style: none;
+    float: left;
+    position: relative;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #bbbbbb;
+    font-size: 20px;
+    padding: 28px;
+    display: block;
+}
+nav ul li a:hover{
+    color: #ffffff;
+}
+nav ul li ul{
+    display: none;
+    position: absolute;
+    background-color: aqua;
+    border-radius: 0px 0px 12px 12px;
+}
+nav ul li:hover ul{
+    display: block;
+}
+nav ul li ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+nav ul li ul li a:hover{
+    color: #ffffff;
+    padding-left: 10px;
+}
+
+/* Content bereich*/
+body{
+    background-color: yellowgreen;
+    margin:  auto;
+    /*Sticky - foot*/
+    display: flex; 
+    flex-direction: column;
+    min-height: 100%;
 }
 
 main{
-    width: 90vw;
     margin: 0 auto;
-    padding: 30px 20px; /* 30px von rechts und links weg und 20px von oben und unten*/
-    /*min-height: calc(75vh);*/
+    width: 900px;
+    max-width: 90%; /*Die maximale breite wird immer 90% sein wenn man das fenster verschiebt*/
 }
 
 article{
-    background-color: azure;
+    background-color:brown;
     padding: 20px; /*wie weit es vom Rand weg ist*/
     margin-bottom: 20px; /*20px vom unteren objekt weg*/
-    border-radius: 5px;
+    border-radius: 7px;
+    margin-top: 20px;
 }
 
 
+
+/* Fusszeile */
 footer{
-    align-items: center;
-    padding: 20px 10%;
-    background-color: #333;
-    color:  #009919;
-    position: absolute;
     bottom: 0;
-    width: 100%;
+    margin-top: auto;/*Sticky - foot*/
 }
-
+.footer-row{
+    display: flex;
+    flex-wrap: wrap;
+}
+ul{
+    list-style: none;
+}
+.footer{
+    background-color: #24262b;
+    padding: 40px 0;
+}
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h4{
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col h4::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+    color: #ffffff;
+    padding-left: 10px;
+}
+.footer-col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255,0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+    color: #24262b;
+    background-color: #ffffff;
+}
+.footer-col .social-links li{
+    list-style: none;
+    display: inline-block;
+}
+.copyright p{
+    display: inline-block;
+    margin-top: 25px;
+}
+.copyright{
+    text-align: center;
+}
+.copyright p{
+    color: #bbbbbb;
+}
 
