--- a/Templades/template.css
+++ b/Templades/template.css
@@ -12,10 +12,10 @@ html{
     width: 100%;
     min-height: 10vh;
     box-sizing: border-box;
-    overflow: hidden;
     background-color: #24262b;
     padding: 40px 0;
     color: #bbbbbb;
+    align-items: center;
 
     /*Erstellt den Ramen der class container*/
     border-color: #000;
@@ -35,20 +35,19 @@ html{
     cursor: pointer;
     margin: 30px;
 }
+/*
 .menu-icon{
     width: 25px;
     cursor: pointer;
 }
-
+*/
 nav{
     height: 80px;
-    background-color: red;
+    background-color: #243848;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /*
-    flex: 1;
-    text-align: right;*/
+    border-radius: 12px;
 }
 nav ul{
     height: 100%;
@@ -60,12 +59,14 @@ nav ul{
 }
 nav li{
     height: 100%;
-    width: 150px;
+    width: 90px;
     text-align: center;
     position: relative;
 }
 nav li:hover{
-    background-color: yellow;
+    background-color: #314453;
+    color: #ffffff;
+    border-radius: 12px;
 }
 nav ul a{
     height: 100%;
@@ -77,8 +78,8 @@ nav ul a{
 }
 .dropdown{
     height: min-content;
-    width: 200px;
-    background-color: blueviolet;
+    width: 90px;
+    background-color: #243848;
     display: none;
     flex-direction: column;
     position: absolute;
@@ -105,13 +106,14 @@ nav input[type="checkbox"]{
     justify-content: center;
     align-items: center;
 }
+/*
 .toggle_button{
     width: 30px;
     height: 23px;
     position: absolute;
     top: 25px;
     right: 25px;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -121,7 +123,63 @@ nav input[type="checkbox"]{
     background: #e91e63;
     border-radius: 100px;
 }
+*/
 
+/*
+@media(max-width: 800px){
+    .toggle_button{
+        display: flex;
+    }
+    nav ul{
+        height: max-content;
+        width: 100%;
+        background-color: green;
+        display: none;
+        position: absolute;
+        top: 80px;
+    }
+    nav li{
+        height: min-content;
+        width: 100%;
+    }
+    nav ul a{
+        padding: 30px 0;
+    }
+    .expandable_li{
+        display: block;
+    }
+    .expandable_li label{
+        padding: 30px 0;
+        cursor: pointer;
+        display: block;
+    }
+    .expandable_li:hover .dropdown{
+        display: none;
+    }
+    .expandable_li input[type="checkbox"]:checked ~.dropdown{
+        display: block;
+    }
+        .dropdown{
+            position: static;
+            width:100%;
+        }
+        .dropdown li{
+            padding: 0;
+            display: block;
+            position: static;
+            background-color: lightcoral;
+        }
+        .dropdown li a{
+            width: 100%;
+            padding: 0;
+            justify-content: center;
+        }
+        #toggle_button:checked ~ ul{
+            display: block;
+        }
+    
+}
+*/
 
 
 nav ul li{
@@ -129,6 +187,7 @@ nav ul li{
     float: left;
     position: relative;
 }
+
 nav ul li a{
     text-decoration: none;
     color: #bbbbbb;
@@ -136,6 +195,7 @@ nav ul li a{
     padding: 28px;
     display: block;
 }
+/*
 nav ul li a:hover{
     color: #ffffff;
 }
@@ -148,6 +208,7 @@ nav ul li ul{
 nav ul li:hover ul{
     display: block;
 }
+*/
 nav ul li ul li a{
     font-size: 16px;
     text-transform: capitalize;
